add ignore for logs + test for coverage